fix: 修复Docker配置和环境变量

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,11 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: ${NODE_ENV:-production}
-      DATABASE_URL: postgresql://${DB_USER:-lifetracker}:${DB_PASSWORD:-your-secure-password}@postgres:5432/${DB_NAME:-lifetracker}
-      REDIS_URL: redis://redis:6379
-      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
-      JWT_EXPIRES_IN: 7d
-      CORS_ORIGIN: https://${DOMAIN_NAME:-localhost}
+      DATABASE_URL: "postgresql://${DB_USER:-lifetracker}:${DB_PASSWORD:-your-secure-password}@postgres:5432/${DB_NAME:-lifetracker}"
+      REDIS_URL: "redis://redis:6379"
+      JWT_SECRET: "${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}"
+      JWT_EXPIRES_IN: "7d"
+      CORS_ORIGIN: "https://${DOMAIN_NAME:-localhost}"
     ports:
       - "3002:3002"
     depends_on:
@@ -62,7 +62,7 @@ services:
     networks:
       - lifetracker-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3002/api/health"]
       timeout: 10s
       retries: 5
 
@@ -75,8 +75,8 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: ${NODE_ENV:-production}
-      NEXT_PUBLIC_API_URL: https://${DOMAIN_NAME:-localhost}/api
-      NEXT_PUBLIC_APP_URL: https://${DOMAIN_NAME:-localhost}
+      NEXT_PUBLIC_API_URL: "https://${DOMAIN_NAME:-localhost}/api"
+      NEXT_PUBLIC_APP_URL: "https://${DOMAIN_NAME:-localhost}"
     ports:
       - "3001:3000"
     depends_on:
