--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "frontend",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "export": "next export",
+    "build:static": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
